--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "start",
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "Deploy JSON Server to Vercel",
+  "main": "server.js",
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
